chore: Update the GIF image source, alt text, and comment on the marriage proposal page.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <!-- PAGE 1.5: MARRIAGE PROPOSAL (Hidden by default) -->
         <div id="marriage-page" class="card hidden">
             <div class="img-container">
-                <!-- Cute Bear asking for marriage -->
-                <img src="https://media.tenor.com/2j1L3tMh5kUAAAAi/bear-love.gif" alt="Marry Me Bear"
+                <!-- Cute Love GIF -->
+                <img src="https://tenor.com/en-GB/view/dare-aggie-bunny-dare-bunny-aggie-bunny-aggie-bunny-carrot-gif-1984526269145962270" alt="Love Bear"
                     class="hero-img">
             </div>
 
