fix: Update the love GIF source URL in `index.html`.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div id="marriage-page" class="card hidden">
             <div class="img-container">
                 <!-- Cute Love GIF -->
-                <img src="https://tenor.com/en-GB/view/dare-aggie-bunny-dare-bunny-aggie-bunny-aggie-bunny-carrot-gif-1984526269145962270" alt="Love Bear"
+                <img src="https://tenor.com/cwLjx09GurG.gif" alt="Love Bear"
                     class="hero-img">
             </div>
 
