--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div id="marriage-page" class="card hidden">
             <div class="img-container">
                 <!-- Cute Love GIF -->
-                <img src="https://tenor.com/cwLjx09GurG.gif" alt="Love Bear"
+                <img src="https://media1.tenor.com/m/9euVF1XwE_YAAAAC/bunny-bunnies.gif" alt="Love Bear"
                     class="hero-img">
             </div>
 
